argocd/lab-applications/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    environment: prod
    name: lab-controller
  name: lab-controller
