argocd/lab-applications/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lab-controller
    environment: prod
  name: lab-controller
  namespace: lab-controller
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lab-controller
  template:
    metadata:
      labels:
        app: lab-controller
        environment: prod
    spec:
      containers:
      - env:
        - name: REDIS_HOST
          value: redis.lab-controller.svc.cluster.local
        - name: REDIS_PORT
          value: '6379'
        - name: REDIS_DB
          value: '0'
        - name: REDIS_PASSWORD
          value: ''
        - name: LAB_BASE_URL
          value: https://projectlabs-api.talentos.darey.io
        - name: WILDCARD_TLS_SECRET_NAME
          value: wildcard-projectlabs-api-talentos-darey-io
        - name: ENABLE_LAB_PASSWORD
          value: 'true'
        - name: LAB_TYPES_PATH
          value: /app/lab-types
        - name: APP_VERSION
          value: 1.0.0
        - name: GIT_COMMIT
          value: latest
        image: 586794457112.dkr.ecr.eu-west-2.amazonaws.com/dareyioinfra/lab-controller:latest
        livenessProbe:
          httpGet:
            path: /health/live
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        name: lab-controller
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
      imagePullSecrets:
      - name: ecr-secret
      serviceAccountName: lab-controller-sa
