argocd/lab-applications/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lab-controller
    environment: prod
  name: lab-controller
  namespace: lab-controller
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: lab-controller
